<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NTOU-credit-calculation</string>
    <string name="title_home">首頁</string>
    <string name="title_pdf" tools:ignore="ExtraTranslation">導出PDF</string>
    <string name="title_csv" tools:ignore="ExtraTranslation">導入CSV</string>
    <string name="name">名字</string>
    <string name="id">學號</string>
    <string name="chinese">國文領域</string>
    <string name="chinese1">國文領域(一)</string>
    <string name="chinese2">國文領域(二)</string>
    <string name="english">英文領域</string>
    <string name="english1">大一英文(上)</string>
    <string name="english2">大一英文(下)</string>
    <string name="english3">進階英文</string>
    <string name="english4">英文畢業門檻</string>
    <string name="general">博雅(通識)領域</string>
    <string name="AI">人工智慧概論</string>
    <string name="general_input">博雅領域(領域名稱)</string>
    <string name="ocean">海洋科學概論</string>
    <string name="sport">體育領域</string>
    <string name="sport_input">體育</string>
    <string name="swim">游泳畢業門檻</string>
    <string name="clean">愛校服務</string>
    <string name="clean1">服務學習\n愛校服務(一)</string>
    <string name="clean2">服務學習\n愛校服務(二)</string>
    <string name="required">系訂專業必修</string>
    <string name="physic">普通物理</string>
    <string name="computers">計算機概論</string>
    <string name="calculus1">微積分(上)</string>
    <string name="calculus2">微積分(下)</string>
    <string name="programming">程式設計</string>
    <string name="data_structure">資料結構</string>
    <string name="discrete">離散數學</string>
    <string name="algorithm">演算法</string>
    <string name="digital_logic">數位邏輯</string>
    <string name="digital_logic_exp">數位邏輯實驗</string>
    <string name="programming2">程式設計(二)</string>
    <string name="computational_histology">計算機組織學</string>
    <string name="linear_algebra">線性代數</string>
    <string name="probability">機率論</string>
    <string name="os">作業系統</string>
    <string name="network">電腦網路</string>
    <string name="project_discussion">資訊專題討論</string>
    <string name="project1">資工系專題(一)</string>
    <string name="project2">資工系專題(二)</string>
    <string name="add">新增</string>
    <string name="delete">刪除</string>
    <string name="core_elective">核心選修課程(至少12學分)</string>
    <string name="core_elective_name">核心選修課程名稱</string>
    <string name="elective">選修課程</string>
    <string name="elective_name">選修課程名稱</string>
    <string name="complete">確認</string>
    <string name="choose_csv">選擇csv檔</string>
    <string name="csv_hint">可以去教學務系統下載\
                            歷屆成績的CSV喔！→</string>
    <string name="ntou">NTOU</string>
    <string name="save">存檔</string>
    <string-array name="credit">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>